# aleakd

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.h
lib/: CMakeLists.txt  aleakd-data.c  aleakd.c  aleakd.h  backtrace.c  backtrace.h  server-comm.c  server-comm.h  wrapper.c  wrapper.h
server/: CMakeLists.txt  IMemOpRcptServerHandler.h  MemOpRcptServer.cpp  MemOpRcptServer.h  MemoryOperation.cpp  MemoryOperation.h  MemoryStats.cpp  MemoryStats.h  QApplicationWindow.cpp  QApplicationWindow.h  QApplicationWindowController.cpp  QApplicationWindowController.h  QMainEventFilter.cpp  QMainEventFilter.h  QMemoryOperationEvent.cpp  QMemoryOperationEvent.h  QMemoryOperationModel.cpp  QMemoryOperationModel.h  main.cpp
server/GUI/: QApplicationWindow.cpp  QApplicationWindow.h  QMemoryOperationListView.cpp  QMemoryOperationListView.h  QMemoryOperationView.cpp  QMemoryOperationView.h  QMemoryStatsView.cpp  QMemoryStatsView.h  QMemoryUsageView.cpp  QMemoryUsageView.h  QThreadInfosView.cpp  QThreadInfosView.h
server/GUIController/: QApplicationWindowController.cpp  QApplicationWindowController.h
server/GUIModel/: QMemoryOperationModel.cpp  QMemoryOperationModel.h  QThreadInfosModel.cpp  QThreadInfosModel.h
server/Global/: Utils.cpp  Utils.h
server/Model/: Backtrace.cpp  Backtrace.h  MemoryOperation.cpp  MemoryOperation.h  MemoryStats.cpp  MemoryStats.h  MemoryUsage.cpp  MemoryUsage.h  SymbolInfos.cpp  SymbolInfos.h  ThreadInfos.cpp  ThreadInfos.h  ThreadOperation.cpp  ThreadOperation.h
server/Server/: IMemOpRcptServerHandler.cpp  IMemOpRcptServerHandler.h  MemOpRcptServer.cpp  MemOpRcptServer.h
shared/: common.c  global-const.h  server-msg.h
src/: aleakd-data.c  aleakd-data.h  aleakd.c  aleakd.h  alloc-entry.c  alloc-entry.h  thread-entry.c  thread-entry.h  wrapper.c
test/: aleakd-test.c  aleakd-test.cpp
